Issue #92 & 93 - Combined javaFX and executable jar